fix scrolling on mobile

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,39 @@
 	box-sizing: border-box;
 }
 
+html {
+	width: 100%;
+	min-height: 100%;
+}
+html, body {
+	width: 100%;
+	min-height: 100%;
+	margin: 0;
+	padding: 0;
+}
+
+.map_container {
+	z-index: -999;
+}
+.map_container, #map, .map_overlay {
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 102%;
+	margin: 0;
+	padding: 0;
+	
+}
+.map_overlay {
+	background-color: rgba(0,0,0,0.45);
+}
+
+#trail_view_container {
+	color: white;
+	text-align: center;
+}
+
 body {
 	font-family: "Archivo Narrow", Helvetica, sans-serif;	
 }
@@ -135,6 +168,16 @@ input[type="text"] {
 		width: auto;
 		height: 100%;
 	}
+	
+	#search_view_container {
+		overflow-y: auto;
+		height: 100%;
+	}
+	
+	html, body {
+		height: 100%;
+		overflow: hidden;
+	}
 }
 
 /* 
@@ -143,7 +186,7 @@ input[type="text"] {
 */
 
 .back_button_container {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	text-align: left;
@@ -204,9 +247,7 @@ input[type="text"] {
 
 #search_view_container {
 	padding: 10px;
-	background-color: white;
-	overflow-y: auto;
-	height: 100%;
+	min-height: 100%;
 	background-color: black;
 	color: white;
 }
@@ -234,7 +275,6 @@ input[type="text"] {
 #trail_view_container {
 	flex: 1;
 	min-height: 100%;
-	overflow-y: auto;
 }
 
 .d-none { display: none; } 
